--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 			Este es el comentario original del HTML
 
 			Estoy realizando modificaciones desde OTRO
+
+
+			Estamos haciendo cambios en grupo
 		</p>
 	</body>
 </html>
