segundo cambio de mau

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 			Estamos haciendo cambios en grupo
 
 			Otra modificacion mia. Mauricio ;)
+
+			Finalizo el feature. Mauricio
 		</p>
 	</body>
 </html>
